fix: fix bug with shifting images and icons

--- a/online-zoo/pages/main/style.css
+++ b/online-zoo/pages/main/style.css
@@ -195,7 +195,7 @@ h1 {
     background-origin: border-box;
     background-clip: padding-box, border-box;
 }
-.pet a {
+.pet > a {
     width: 366px;
     height: 366px;
 }
